@@ -1,5 +1,6 @@
 Version 2.1.128
     The first rank of Iron Arm for Unarmed now only gives 1.5 bonus damage instead of 4 (other ranks are the same as before)
+    Blast Mining nerf reverted
 
 
 Version 2.1.127
